Finishing up work on #321 - full recalc processors that are part of the same rollup conductor run now properly reset values (this was happening, previously, for proper full recalcs, but was NOT happening for full recalcs created by virtue of Rollup__mdt.IsFullRecordSet__c being true). The consolidation of where values were being reset also uncovered an issue introduced in 1.5.7 which was previously being obscured by full recalc processors resetting parent-level values over-eagerly (even when they had been reset by another full recalc) - which involved duplicate rollups running - and that issue has also now been fixed

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -198,6 +198,7 @@ global without sharing virtual class Rollup {
 
   public class CalcItemBag {
     private final Map<Id, SObject> idToCalcItem = new Map<Id, SObject>();
+    private Boolean hasBeenCleared = false;
     public Boolean hasQueriedForAdditionalItems = false;
     public CalcItemBag(List<SObject> calcItems) {
       for (SObject calcItem : calcItems) {
@@ -209,8 +210,15 @@ global without sharing virtual class Rollup {
       return this.idToCalcItem.values();
     }
 
+    public void clear() {
+      if (this.hasBeenCleared == false) {
+        this.idToCalcItem.clear();
+        this.hasBeenCleared = true;
+      }
+    }
+
     public void add(SObject calcItem) {
-      idToCalcItem.put(calcItem.Id, calcItem);
+      this.idToCalcItem.put(calcItem.Id, calcItem);
     }
   }
 
@@ -635,7 +643,6 @@ global without sharing virtual class Rollup {
   )
   global static List<FlowOutput> performRollup(List<FlowInput> flowInputs) {
     List<FlowOutput> flowOutputs = new List<FlowOutput>();
-    List<Rollup> localRollups = new List<Rollup>();
     InvocationPoint fromInvocable = InvocationPoint.FROM_INVOCABLE;
 
     // Flow bulkifies things, but poorly. It's possible to get multiple FlowInputs with the same metadata, but different calc items (for example)
@@ -675,6 +682,7 @@ global without sharing virtual class Rollup {
       flowOutputs.add(flowOutput);
     }
 
+    Map<SObjectType, List<Rollup>> localRollups = new Map<SObjectType, List<Rollup>>();
     Map<Integer, List<SObject>> hashCodeToCalcItems = new Map<Integer, List<SObject>>();
     Map<SObjectType, RollupMetadata> typeToWrappedMeta = new Map<SObjectType, RollupMetadata>();
     for (Rollup__mdt key : metaToInputWrapper.keySet()) {
@@ -702,7 +710,7 @@ global without sharing virtual class Rollup {
           logMessage = 'deferring processing for rollup:';
           CACHED_ROLLUPS.add(rollupConductor);
         } else {
-          localRollups.add(rollupConductor);
+          populateRollupByType(localRollups, wrapper.sObjectType, rollupConductor);
         }
         if (wrapper.flowInput.shouldRunSync) {
           for (Rollup roll : rollupConductor.rollups) {
@@ -715,7 +723,7 @@ global without sharing virtual class Rollup {
 
     try {
       if (localRollups.isEmpty() == false) {
-        batch(localRollups, fromInvocable);
+        batch(getFlattenedProcessors(localRollups), fromInvocable);
       }
     } catch (Exception ex) {
       RollupLogger.Instance.log('an error occurred during invocable action:', ex, LoggingLevel.ERROR);
@@ -1569,7 +1577,7 @@ global without sharing virtual class Rollup {
       return rollupConductor;
     }
 
-    List<Rollup> localRollups = new List<Rollup>();
+    Map<SObjectType, List<Rollup>> localRollups = new Map<SObjectType, List<Rollup>>();
     Map<SObjectType, RollupMetadata> typeToWrappedMeta = new Map<SObjectType, RollupMetadata>();
     processCustomMetadata(localRollups, rollupMetadata, calcItems, oldCalcItems, mergedParentIds, rollupContext, InvocationPoint.FROM_APEX, typeToWrappedMeta);
 
@@ -1577,10 +1585,14 @@ global without sharing virtual class Rollup {
     populateCachedApexOperations(calcItemSObjectType, apexContext);
 
     if (rollupMetadata.isEmpty() == false) {
-      localRollups.add(getRollup(rollupMetadata, calcItemSObjectType, calcItems, oldCalcItems, eval, InvocationPoint.FROM_APEX));
+      populateRollupByType(
+        localRollups,
+        calcItemSObjectType,
+        getRollup(rollupMetadata, calcItemSObjectType, calcItems, oldCalcItems, eval, InvocationPoint.FROM_APEX)
+      );
     }
 
-    flattenBatches(rollupConductor, localRollups);
+    flattenBatches(rollupConductor, getFlattenedProcessors(localRollups));
     return rollupConductor;
   }
 
@@ -1815,7 +1827,7 @@ global without sharing virtual class Rollup {
   }
 
   private static void processCustomMetadata(
-    List<Rollup> rollups,
+    Map<SObjectType, List<Rollup>> rollups,
     List<Rollup__mdt> metas,
     List<SObject> calcItems,
     Map<Id, SObject> oldCalcItems,
@@ -1895,19 +1907,18 @@ global without sharing virtual class Rollup {
     // collapse delete/full recalc operations
     for (String deleteKey : deleteKeyToReparentOp.keySet()) {
       DeleteReparentOperation deleteReparentOp = deleteKeyToReparentOp.get(deleteKey);
+      SObjectType deleteSObjectType = deleteReparentOp.reparentedRecords.getSObjectType();
       Rollup deleteProcessor = getRollup(
         deleteReparentOp.rollupMetas,
-        deleteReparentOp.reparentedRecords.getSObjectType(),
+        deleteSObjectType,
         deleteReparentOp.reparentedRecords,
         new Map<Id, SObject>(),
         null,
         invokePoint
       );
-      rollups.add(deleteProcessor);
+      populateRollupByType(rollups, deleteSObjectType, deleteProcessor);
     }
-    if (fullRecalcMetas.isEmpty() == false) {
-      rollups.addAll(getFullRecalcRollups(fullRecalcMetas, invokePoint, typeToWrappedMeta));
-    }
+    fillFullRecalcRollups(fullRecalcMetas, invokePoint, typeToWrappedMeta, rollups);
   }
 
   private static QueryWrapper getFullRecalcQueryWrapper(Rollup__mdt meta, List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
@@ -2008,10 +2019,11 @@ global without sharing virtual class Rollup {
     return '\nORDER BY ' + String.join(orderByFields, ',');
   }
 
-  private static List<Rollup> getFullRecalcRollups(
+  private static void fillFullRecalcRollups(
     List<FullRecalculationMetadata> fullRecalcMetas,
     InvocationPoint invokePoint,
-    Map<SObjectType, RollupMetadata> typeToWrappedMeta
+    Map<SObjectType, RollupMetadata> typeToWrappedMeta,
+    Map<SObjectType, List<Rollup>> rollups
   ) {
     for (Integer index = 0; index < fullRecalcMetas.size(); index++) {
       FullRecalculationMetadata fullRecalcMeta = fullRecalcMetas[index];
@@ -2024,6 +2036,9 @@ global without sharing virtual class Rollup {
         }
       } else {
         wrappedMeta = typeToWrappedMeta.get(fullRecalcMeta.calcItemType);
+        if (rollups.containsKey(fullRecalcMeta.calcItemType)) {
+          rollups.get(fullRecalcMeta.calcItemType).clear();
+        }
       }
       transformFullRecalcMetadataToRollupMetadata(fullRecalcMetas, wrappedMeta, index);
       if (wrappedMeta.recordCount != RollupQueryBuilder.SENTINEL_COUNT_VALUE) {
@@ -2040,15 +2055,18 @@ global without sharing virtual class Rollup {
       typeToWrappedMeta.put(fullRecalcMeta.calcItemType, wrappedMeta);
     }
 
-    return transformWrappedMetadataToFullRecalcRollups(typeToWrappedMeta, invokePoint);
+    List<RollupFullRecalcProcessor> fullRecalcs = transformWrappedMetadataToFullRecalcRollups(typeToWrappedMeta, invokePoint);
+    for (RollupFullRecalcProcessor fullRecalc : fullRecalcs) {
+      populateRollupByType(rollups, fullRecalc.getCalcItemType(), fullRecalc);
+    }
   }
 
-  private static List<Rollup> transformWrappedMetadataToFullRecalcRollups(
+  private static List<RollupFullRecalcProcessor> transformWrappedMetadataToFullRecalcRollups(
     Map<SObjectType, RollupMetadata> typeToWrappedMeta,
     InvocationPoint localInvokePoint
   ) {
     final Integer maxQueryLength = 100000;
-    List<Rollup> fullRecalcRollups = new List<Rollup>();
+    List<RollupFullRecalcProcessor> fullRecalcRollups = new List<RollupFullRecalcProcessor>();
     for (RollupFullRecalcProcessor preCachedRollup : CACHED_FULL_RECALCS) {
       if (typeToWrappedMeta.containsKey(preCachedRollup.getCalcItemType())) {
         // if other query fields were added to the query string, we need to fix up the cached full recalcs(s') query strings
@@ -2166,6 +2184,20 @@ global without sharing virtual class Rollup {
       flattenBatches(conductor, rollups);
     }
     return conductor.runCalc();
+  }
+
+  private static void populateRollupByType(Map<Schema.SObjectType, List<Rollup>> rollups, Schema.SObjectType calcType, Rollup processor) {
+    List<Rollup> processors = rollups.containsKey(calcType) ? rollups.get(calcType) : new List<Rollup>();
+    processors.add(processor);
+    rollups.put(calcType, processors);
+  }
+
+  private static List<Rollup> getFlattenedProcessors(Map<Schema.SObjectType, List<Rollup>> typeToProcessors) {
+    List<Rollup> flattenedRollups = new List<Rollup>();
+    for (Schema.SObjectType calcType : typeToProcessors.keySet()) {
+      flattenedRollups.addAll(typeToProcessors.get(calcType));
+    }
+    return flattenedRollups;
   }
 
   private static void flattenBatches(Rollup outerRollup, List<Rollup> rollups) {
